# zero2production-with-front-end

./: .env.development  LICENSE  README.md  index.html  nginx.conf  package-lock.json  spec.yaml
.github/workflows/: general.yml
api/: .dockerignore  Cargo.toml  Dockerfile  spec.yaml
api/.cargo/: config.toml
api/.sqlx/: query-6c85e11ae223609ca8fb5dd9f6fc714ad1ee5ed83973353a7fad1c42db857b20.json
api/configuration/: base.yaml
api/migrations/: 20260305034949_create_subscriptions_table.sql
api/scripts/: init_db.sh
api/src/: main.rs  startup.rs  telemetry.rs
api/src/domain/: subscriber_email.rs  subscriber_name.rs
api/src/routes/: health_check.rs  subscriptions.rs
api/tests/: health_check.rs
client/src/: main.js  subscribe.js
src/: health_check.js  main.js  notFound.js  router.js
src/routes/: confirmSubscription.js  index.js  subscribe.js
